--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,11 +7,14 @@
 
     <TextView android:layout_width="wrap_content"
               android:id="@+id/titleText"
+              android:gravity="center_horizontal"
+              android:layout_marginStart="16dp"
+              android:layout_marginEnd="16dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintTop_toTopOf="parent"
-              android:textSize="36sp"
+              android:textSize="48sp"
               android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
